<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity" >
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/top_panel" />

	<androidx.viewpager.widget.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/pager"
		android:background="@android:color/transparent"
		android:layout_above="@+id/tabs"
		android:layout_below="@+id/logo"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
	</androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/itab1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
        
	        <ImageView
	            android:id="@+id/imgIntro"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:background="@android:color/transparent"
	            android:contentDescription="@string/app_name"
	            android:src="@drawable/btn_intro" />
	        
	        <TextView
	            android:id="@+id/itab1label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:textColor="@android:color/white"
	            android:singleLine="true"
	            android:ellipsize="end"
	            android:text="@string/intro" />
        
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/itab2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
        
	        <ImageView
	            android:id="@+id/imgInfo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:background="@android:color/transparent"
	            android:contentDescription="@string/app_name"
	            android:src="@drawable/btn_info" />
	        
	        <TextView
	            android:id="@+id/itab2label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:singleLine="true"
	            android:ellipsize="end"
	            android:text="@string/info" />
        
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itab3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
        
	        <ImageView
	            android:id="@+id/imgPhrasebook"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:background="@android:color/transparent"
	            android:contentDescription="@string/app_name"
	            android:src="@drawable/btn_phrasebook" />
	        
	        <TextView
	            android:id="@+id/itab3label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:singleLine="true"
	            android:ellipsize="end"
	            android:text="@string/phrasebook" />
        
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/itab4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
        
	        <ImageView
	            android:id="@+id/imgExtras"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:background="@android:color/transparent"
	            android:contentDescription="@string/app_name"
	            android:src="@drawable/btn_extras" />
	        
	        <TextView
	            android:id="@+id/itab4label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:singleLine="true"
	            android:ellipsize="end"
	            android:text="@string/extras" />
        
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
